--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ coverage
 # nyc test coverage
 .nyc_output
 
-# Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
+# Grunt intermediate firebase (https://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
 # Bower dependency directory (https://bower.io/)
@@ -78,7 +78,8 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
-
+server/app/firebase/credentials.json
+google-credentials.json
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
