--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
+    "@mdxeditor/editor": "^3.11.3",
     "@reduxjs/toolkit": "^2.2.7",
+    "@uiw/react-md-editor": "^4.0.4",
     "antd": "^5.20.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
