--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,17 @@
     "@ant-design/icons": "^5.4.0",
     "@mdxeditor/editor": "^3.11.3",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/styled-components": "^5.1.34",
     "@uiw/react-md-editor": "^4.0.4",
     "antd": "^5.20.3",
+    "axios": "^1.7.7",
+    "framer-motion": "^11.5.4",
+    "motion": "^10.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
