--- a/client/package.json
+++ b/client/package.json
@@ -13,16 +13,19 @@
     "@ant-design/icons": "^5.4.0",
     "@mdxeditor/editor": "^3.11.3",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "@uiw/react-md-editor": "^4.0.4",
     "antd": "^5.20.3",
     "axios": "^1.7.7",
     "framer-motion": "^11.5.4",
+    "moment": "^2.30.1",
     "motion": "^10.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
