--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,4 +1,7 @@
-{
+{  "compilerOptions": {
+    "forceConsistentCasingInFileNames": true,
+    "strict": true
+  },
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
